Added relations between Connectors, Channels and Event Sources/Sinks
